Added PaymentDetailContext, connectionstring
Added PaymentDetailContext, connectionstring

--- a/API/Payment.API/Payment.API/appsettings.json
+++ b/API/Payment.API/Payment.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PaymentDetailConnection": "Server=Multisoft-Ryan;Database=PaymentDetailDB;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSet=True;"
+  }
 }
